@startuml

package PackageCommand {
    class ATM {
        - command: Command

        + setCommand(command: Command)
        + execute()
        + showAllTransactions(): void
    }

    interface   Command {
        + execute(): void
    }

    class    WithdrawCommand {
        - feeStrategy: FeeStrategy

        + execute(): void
    }

    class    TransferCommand {
        - feeStrategy: FeeStrategy

        + execute(): void
    }

    class    DepositCommand {
        + execute(): void
        + deposit(): double
    }

    class    BalanceCommand {
        + execute(): void
    }

    Command <|.. WithdrawCommand
    Command <|.. DepositCommand
    Command <|.. TransferCommand
    Command <|.. BalanceCommand

}

package PackageStrategy {

    interface   FeeStrategy {
        + calculateFee(continent: Continent): double
    }

    class    StandardFeeStrategy {
        + calculateFee(continente: Continent): double
    }

    class    PremiumFeeStrategy {
        + calculateFee(continente: Continent): double
    }

    FeeStrategy <|.. StandardFeeStrategy
    FeeStrategy <|.. PremiumFeeStrategy
}

package PackageObserver {

    interface  Subject {
        + attach(observer: Observer)
        + detach(observer: Observer)
        + notify()
    }

    class Account {
        - username: String
        - password: String
        - attemptsFailed: int
        - balance: double
        - transactions: ArrayList<>
        - observers: List<Observer>
        - continent: Continent

        + login(): boolean
        + deposit(amount: double)
        + withdraw(amount: double)
        + transfer(amount: double, targetAccount: Account)
        + getBalance(): double
        + showInfo(): void
        + showCommands(): void
    }

    interface    Observer {
        + notifyObservers()
    }

    class    AuditObserver {
        + update()
    }

    class    NotificationObserver {
        + update()
    }

    Observer <|.. AuditObserver
    Observer <|.. NotificationObserver
}

enum Continent {
    AMERICA
    EUROPE
    ASIA
    AFRICA
    OCEANIA
}

interface Transaction {
    + validation(): boolean
}

Continent --o Account
Transaction <|-- WithdrawCommand
Transaction <|-- DepositCommand
Transaction <|-- TransferCommand

ATM o-- Command

WithdrawCommand o-- FeeStrategy
TransferCommand o-- FeeStrategy

Account o-- Observer
Subject <|-- Account

Account -- ATM

@enduml
